# my-notion

./: .env.example  .gitignore  Makefile  pyproject.toml
src/: main.py  settings.py
src/domain/: __init__.py  language.py
src/domain/diary/: __init__.py  diary.py  diary_entry.py  diary_entry_revision.py  diary_factory.py  diary_page.py  interface_diary_repository.py  parsed_diary_entry.py
src/domain/diary_feedback/: __init__.py  diary_entry_error_analysis.py  diary_entry_stats.py  grammatical_error.py  grammatical_error_type.py
src/domain/grammatical_error/: __init__.py  grammatical_error.py
src/domain/interface/: __init__.py  interface_diary_repository.py  interface_llm_client.py
src/domain/notion/: __init__.py  notion_block.py  notion_block_type.py  notion_page.py
src/domain/parsed_diary/: __init__.py  parsed_diary.py
src/infra/: diary_repository.py  gemini_client.py
src/usecase/: __init__.py  calculate_diary_stats.py  parse_diary_content_to_revisions.py
src/usecase/detect_grammatical_errors/: __init__.py  base.py  gemini.py
src/usecase/diary_entry_parser/: __init__.py  base.py  english_diary_entry_parser.py
src/usecase/diary_parser/: __init__.py  base.py  english_diary_parser.py
src/usecase/grammatical_error_detector/: __init__.py  base.py  gemini_based_ged.py
src/usecase/nlp_diary_entry/: __init__.py  base.py  nlp_english.py
src/usecase/parse_diary/: __init__.py  parse_english_diary.py
